--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <h2> Curso de HTML5 com CSS3</h2>
                 <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur ipsa quaerat deserunt numquam et optio vel culpa ipsum. Similique nostrum commodi consequatur, asperiores totam ad quod possimus. Ratione, officiis consectetur.</p>
             </article>
-            <article>]
+            <article>
                 <h2> Curso de JavaScript</h2>
                 <h2> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus officia aut illum iure ex corporis omnis, quas vero, doloribus a ipsa necessitatibus nemo. Quae et impedit ratione sed atque corrupti. </h2>
             </article>
