--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </article>
             <article>
                 <h2> Curso de JavaScript</h2>
-                <h2> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus officia aut illum iure ex corporis omnis, quas vero, doloribus a ipsa necessitatibus nemo. Quae et impedit ratione sed atque corrupti. </h2>
+                <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus officia aut illum iure ex corporis omnis, quas vero, doloribus a ipsa necessitatibus nemo. Quae et impedit ratione sed atque corrupti. </p>
             </article>
         </main>
 </body>
