--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <h2> Artigo 001 </h2>
                 <p> Texto do artigo 001 </p>
             </article>
-            <article>]
+            <article>
                 <h2> Artigo 002 </h2>
                 <h2> Texto do artigo 002 </h2>
             </article>
